creo que ya funciona con archivos esteticos